   * Added check that a denominator has been specified for Binomial models
   * Added check that no variables are made random at level-one in discrete response models
   * Added check that response variables for multinomial models have at least two categories
   * Added check that the reference category is valid for multinomial models

2. Changes
   * Enabled matching starting values on parameter names (allowing subsets of parameters to be specified)
   * Enabled use of the coef, vcov and logLik functions
   * Added stubs for predict, residuals, df.residual and fitted
   * Added further example data
   * Added examples to replicate the MLwiN User's guide
   * Added option to control the maximum number of iterations for (R)IGLS
   * Added option to control the (R)IGLS convergence tolerance
   * (R)IGLS convergence is now reported in the output
   * Added Log-likelihood to the output for (R)IGLS models
   * prior2macro will automatically be called from runMLwiN if priorParam is specified as a list
   * Added hierarchy information to the model output
   * Allow non-factor variables as the respone for multinomial models

Fri Jun 20 2014
1. Bug fixing
   * Added check that CAR is only requested at one level, unless CAR mean centring is turned on

2. Changes
   * Added option to turn on CAR mean centring

Mon Jun 9 2014
1. Changes
   * 1 can now be used in the model formula to specify an intercept term
   * If debugmode is turned on MLwiN will pause before and after fitting the model
   * Added extra estimation option to allow extra binomial/poisson/negative binomial/multinomial variables in (R)IGLS
   * Added reset estimation option to control negative variances in (R)IGLS models
   * Added constraints option for fixed and random part in (R)IGLS models
   * Allow more data variables by finding empty columns for output rather than hardcoding column numbers

Fri Jun 6 2014
1. Bug fixing