@@ -16,7 +16,6 @@ Model Specification Checks:
 Check response types for mixed response models (MLwiN allows Normals plus binaries OR Poissons, all discrete responses must use the same link function)
 (IGLS) Check model has more than one level if > MQL1 specified
 (IGLS) Check lower levels are non-equal standardised weights if standardised weights are specified
-(MCMC) Check hierarchical centring level is >=2
 
 Additional Functionality:
 Allow omission of 0| for the fixed part in model formula
